--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/joshuavaslie2021/burger#readme",
   "dependencies": {
+    "cli": "^1.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "heroku": "^7.47.7",
