--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "heroku": "^7.47.7",
+    "heroku-cli": "^7.0.9",
     "mysql": "^2.18.1"
   }
 }
