--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,5 +23,7 @@
     "heroku": "^7.47.7",
     "heroku-cli": "^7.0.9",
     "mysql": "^2.18.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
