--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "express-handlebars": "^5.2.0",
     "heroku": "^7.47.7",
     "heroku-cli": "^7.0.9",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
+    "orm": "^5.0.5"
   },
-  "devDependencies": {},
   "description": ""
 }
